# SensorFusion

./: .gitignore  Build.sh  CMakeLists.txt  CMakePresets.json  README.md
Applications/: CMakeLists.txt
Applications/KalmanFilter/: CMakeLists.txt  Main.cpp
Applications/SensorFusion/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui
Libraries/: CMakeLists.txt
Libraries/SFCore/: CMakeLists.txt  SFUtilities.cpp
Libraries/SFCore/SFCore/: SFCommon.h  SFUtilities.h
Libraries/SFKalmanFilter/: CMakeLists.txt  SFKalmanFilter.cpp
Libraries/SFKalmanFilter/SFKalmanFilter/: SFKalmanFilter.h
Objects/: CMakeLists.txt
Objects/SFKalmanFilter/: CMakeLists.txt  SFKalmanFilter.cpp
Objects/SFKalmanFilter/SFKalmanFilter/: SFKalmanFilter.h
Objects/SFKalmanFilterObject/: CMakeLists.txt  SFKalmanFilterObject.cpp
Objects/SFKalmanFilterObject/SFKalmanFilterObject/: SFKalmanFilterObject.h
Tests/: CMakeLists.txt
Widgets/: CMakeLists.txt
Widgets/SFBaseWidget/: CMakeLists.txt  SFBaseWidget.cpp
Widgets/SFBaseWidget/SFBaseWidget/: SFBaseWidget.h
Widgets/SFSensorControlWidget/: CMakeLists.txt  SFSensorControlWidget.cpp  SFSensorControlWidget.ui
Widgets/SFSensorControlWidget/SFSensorControlWidget/: SFSensorControlWidget.h
